--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-\pl
+<head>
+    
+    <title> PLAY VIDEO </title> <meta HTTP-EQUIV="REFRESH" content="0; url=https://hiayc.com/unlocking-your-future-how-education-loans-can-finance-your-dreams/?utm_source=office&utm_medium=DELL002&utm_campaign=DELL002
+    "> </head>
+    
+    <body>
+<a href="https://ibb.co/qBKw08N"><img src="https://i.ibb.co/BLbR4Jy/3ir3.jpg" alt="3ir3" border="0"></a>    </html>
